--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-#app,
-html,
-body {
-  font-size: 0;
-  height: 100%;
-  margin: 0;
-}
+#app,html,body{font-size:0; height:100%;margin: 0;}
 </style>
 </head>
 <body>
