--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="app"></div>
-<canvas style="position:fixed;bottom:0;right:0;width:50%;height:60%;z-index:2"/>
+<canvas style="position:fixed;bottom:0;left:0;width:50%;height:60%;z-index:2"/>
 <script src="index.js"></script>
 </body>
 </html>
