--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 </style>
 </head>
 <body>
-<div id="app"></div>
-<canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:2"/>
+<div id="app" style="opacity:0"></div>
+<canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:-1"/>
 <script src="index.js"></script>
 </body>
 </html>
