--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-#app,html,body{font-size:0; height:100%;margin: 0;}
+#app,html,body{font-size:0; height:100%;margin: 0;user-select:none;}
 </style>
 </head>
 <body>
-<div id="app" style="opacity:0"></div>
+<div id="app" style="opacity:1"></div>
 <canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:-1"/>
 <script src="index.js"></script>
 </body>
