--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-*{box-sizing: border-box;}
-#app,html,body{font-size:0; height:100%;margin: 0;user-select:none;}
+*{box-sizing:border-box;}
+#app,html,body{font-size:0;height:100%;margin:0;user-select:none;font-family:"Helvetica Neue",Helvetica,Arial;}
 </style>
 </head>
 <body>
