--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 *{box-sizing:border-box;}
-#app,html,body{font-size:0;height:100%;margin:0;user-select:none;font-family:"Helvetica Neue",Helvetica,Arial;}
+#app,html,body{font-size:0;height:100%;margin:0;user-select:none;font-family:"Helvetica Neue",Helvetica,Arial;overscroll-behavior-y:contain;}
 </style>
 </head>
 <body>
