--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="app" style="opacity:1"></div>
-<canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1000"/>
+<canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1000;opacity:1"/>
 <script src="index.js"></script>
 </body>
 </html>
