--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
 *{box-sizing:border-box;}
-#app,html,body{font-size:0;height:100%;margin:0;user-select:none;font-family:"Helvetica Neue",Helvetica,Arial;overscroll-behavior-y:contain;}
+html,body{font-size:0;height:100%;margin:0;user-select:none;font-family:Helvetica,Arial;overscroll-behavior-y:contain;}
 </style>
 </head>
 <body>
 <canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1;opacity:1"/>
-<script src="index.js"></script>
+<script src="a.js"></script>
 </body>
 </html>
