--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-*{box-sizing:border-box;}
+*{box-sizing:border-box;transition:transform 180ms}
 html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helvetica,Arial;overscroll-behavior-y:contain;}
 @media (min-width: 600px){body{font-size: 16px}}
 </style>
@@ -11,25 +11,25 @@ html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helv
 <body>
 <canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1;opacity:1"></canvas>
 
-<div id="element-toolbar" style="position:fixed;padding:10px;background:#dddc;bottom:0;right:0;width:40%;z-index:2;border-radius:20px 0 0 0;display:flex;flex-direction:row;transition:transform 180ms">
+<div id="element-toolbar" style="position:fixed;padding:10px;background:#dddc;bottom:0;right:0;width:40%;height:60px;z-index:2;border-radius:20px 0 0 0;display:flex;flex-direction:row;">
   <button id="element-shopButton">open shop</button>
   <button id="element-cancel" style="padding:10px;margin-left:auto">× cancel</button>
   <div id="element-bank" style="padding:10px;margin-left:auto;"></div>
 </div>
 
-<div id="element-shopPanel" style="position:fixed;max-width:40rem;width:calc(100% - 20px);right:10px;height:250px;bottom:10px;border-radius:4px;transition:transform 180ms;transform-origin:50% 110%;transform:scale(0,0);display:flex;flex-direction:row;z-index:2">
-  <div id="element-blueprintList" style="width:30%;min-width:160px;background:#dddc;flex-shrink:0"></div>
+<div id="element-shopPanel" style="position:fixed;max-width:40rem;width:calc(100% - 20px);right:10px;height:250px;bottom:10px;border-radius:4px;transform-origin:50% 110%;transform:scale(0,0);display:flex;flex-direction:row;z-index:2">
+  <div id="element-blueprintList" style="width:30%;min-width:100px;background:#dddc;flex-shrink:0.3"></div>
 
   <div style="padding:10px;background:#fffc;flex-grow:1;display:flex;flex-direction:column" >
     <div id="element-blueprintName" style="font-weight:bold;margin:10px"></div>
 
-    <div style="display:flex;flex-direction:row;position:relative;align-items:center">
+    <div style="display:flex;flex-direction:row;position:relative;align-items:center;justify-content:space-around">
 
       <canvas id="element-blueprintImage" width="100px" height="100px" style="width:100px;height:100px;cursor:pointer"></canvas>
 
-      <div id="element-blueprintCost" style="margin-left:auto;margin-right:10px"></div>
+      <div id="element-blueprintCost" style="margin-right:10px"></div>
 
-      <button id="element-blueprintRotate" style="position:absolute;bottom:-14px;left:-4px" >↻</button>
+      <button id="element-blueprintRotate" style="font-size:1.2em;position:absolute;bottom:-14px;left:-4px" >↻</button>
 
     </div>
 
@@ -38,6 +38,12 @@ html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helv
   </div>
 
   <button id="element-closeShopButton" style="font-size:30px;padding:4px 10px;position:absolute;top:2px;right:2px;z-index:3;background:#0000;border:none">×</button>
+</div>
+
+<div id="element-hint" style="position:fixed;right:10px;bottom:0;font-size:1.8em;line-height:40px;letter-spacing:1.4px;z-index:3;font-weight:bold"></div>
+
+<div id="element-overlay" style="position:fixed;top:0;left:0;right:0;bottom:0;background-color:#000d;transition:background-color 200ms;display:flex;justify-content:center;align-items:center;z-index:3">
+  <div id="element-overlayTutorial" style="color:#fff;font-size:24px;line-height:40px;letter-spacing:1.4px;padding:0 10%"></div>
 </div>
 
 <script src="a.js"></script>
