--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@ html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helv
 </style>
 </head>
 <body>
-<canvas style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1;opacity:1"></canvas>
+<canvas id="element-scene" style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1;opacity:1"></canvas>
 
 <div id="element-toolbar" style="position:fixed;padding:10px;background:#dddc;bottom:0;right:0;width:40%;height:60px;z-index:2;border-radius:20px 0 0 0;display:flex;flex-direction:row;">
   <button id="element-shopButton">open shop</button>
@@ -35,7 +35,6 @@ html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helv
       <button id="element-blueprintRotate" style="font-size:1.2em;position:absolute;bottom:-14px;left:-4px" >↻</button>
 
     </div>
-
 
     <canvas id="element-blueprintRecipe" width="220" height="50" style="width:220px;height:50px;margin:auto;margin-bottom:0"></canvas>
   </div>
