--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,11 @@ html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helv
 <body>
 <canvas id="element-scene" style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1;opacity:1"></canvas>
 
-<div id="element-toolbar" style="position:fixed;padding:10px;background:#dddc;bottom:0;right:0;width:40%;height:60px;z-index:2;border-radius:20px 0 0 0;display:flex;flex-direction:row;">
-  <button id="element-shopButton">open shop</button>
-  <button id="element-cancel" style="padding:10px;margin-left:auto">× cancel</button>
-  <div id="element-bank" style="padding:10px;margin-left:auto;"></div>
+<div id="element-bank" style="position:fixed;padding:10px;background:#dddc;top:0;right:0;min-width:80px;z-index:2;border-radius:0 0 0 20px;font-size:1.2em"></div>
+
+<div id="element-toolbar" style="position:fixed;padding:10px;background:#dddc;bottom:0;right:0;min-width:100px;height:60px;z-index:2;border-radius:20px 0 0 0;display:flex;flex-direction:row">
+  <button id="element-shopButton" style="padding:10px">open shop</button>
+  <button id="element-cancel" style="padding:10px">× cancel</button>
 </div>
 
 <div id="element-shopPanel" style="position:fixed;max-width:40rem;width:calc(100% - 20px);right:10px;height:250px;bottom:10px;border-radius:4px;transform-origin:50% 110%;transform:scale(0,0);display:flex;flex-direction:row;z-index:2">
@@ -30,7 +31,7 @@ html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helv
 
       <canvas id="element-blueprintImage" width="100px" height="100px" style="width:100px;height:100px;cursor:pointer"></canvas>
 
-      <div id="element-blueprintCost" style="margin-right:10px"></div>
+      <div id="element-blueprintCost" style="margin-right:10px;font-size:1.2em"></div>
 
       <button id="element-blueprintRotate" style="font-size:1.2em;position:absolute;bottom:-14px;left:-4px" >↻</button>
 
