--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Sushi factory">
+<meta name="twitter:title" content="🍣👨‍🍳 Sushi Kitchen">
 <meta name="twitter:image" content="https://github.com/Platane.png">
+<title>🍣👨‍🍳 Sushi Kitchen</title>
 <style>
 *{box-sizing:border-box;transition:transform 180ms}
 html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helvetica,Arial;overscroll-behavior-y:contain;}
