--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="🍣👨‍🍳 Sushi Kitchen">
-<meta name="twitter:image" content="https://github.com/Platane.png">
-<title>🍣👨‍🍳 Sushi Kitchen</title>
 <style>
 *{box-sizing:border-box;transition:transform 180ms}
-html,body{font-size: 14px;height:100%;margin:0;user-select:none;font-family:Helvetica,Arial;overscroll-behavior-y:contain;}
+html,body{font-size: 14px;user-select:none;font-family:Helvetica;overscroll-behavior-y:contain;}
 @media (min-width: 600px){body{font-size: 16px}}
 </style>
 </head>
