--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,16 @@ html,body{font-size: 14px;user-select:none;font-family:Helvetica;overscroll-beha
 </style>
 </head>
 <body>
-<canvas id="element-scene" style="position:fixed;bottom:0;left:0;width:100%;height:100%;z-index:1;opacity:1"></canvas>
+<canvas id="element-scene" style="position:fixed;bottom:0;left:0;width:100%;height:100%"></canvas>
 
-<div id="element-bank" style="position:fixed;padding:10px;background:#dddc;top:0;right:0;min-width:80px;z-index:2;border-radius:0 0 0 20px;font-size:1.2em"></div>
+<div id="element-bank" style="position:fixed;border-radius:0 0 0 20px;padding:10px;background:#dddc;top:0;right:0;min-width:80px;font-size:1.2em"></div>
 
-<div id="element-toolbar" style="position:fixed;padding:10px;background:#dddc;bottom:0;right:0;min-width:100px;height:60px;z-index:2;border-radius:20px 0 0 0;display:flex;flex-direction:row">
+<div id="element-toolbar" style="position:fixed;border-radius:20px 0 0 0;padding:10px;background:#dddc;bottom:0;right:0;min-width:100px;height:60px;display:flex;flex-direction:row">
   <button id="element-shopButton" style="padding:10px">open shop</button>
   <button id="element-cancel" style="padding:10px">× cancel</button>
 </div>
 
-<div id="element-shopPanel" style="position:fixed;max-width:40rem;width:calc(100% - 20px);right:10px;height:250px;bottom:10px;border-radius:4px;transform-origin:50% 110%;transform:scale(0,0);display:flex;flex-direction:row;z-index:2">
+<div id="element-shopPanel" style="position:fixed;border-radius:4px;max-width:40rem;width:calc(100% - 20px);right:10px;height:250px;bottom:10px;transform-origin:bottom;display:flex;flex-direction:row">
   <div id="element-blueprintList" style="width:30%;min-width:100px;background:#dddc;flex-shrink:0.3"></div>
 
   <div style="padding:10px;background:#fffc;flex-grow:1;display:flex;flex-direction:column" >
@@ -28,7 +28,7 @@ html,body{font-size: 14px;user-select:none;font-family:Helvetica;overscroll-beha
 
       <canvas id="element-blueprintImage" width="100px" height="100px" style="width:100px;height:100px;cursor:pointer"></canvas>
 
-      <div id="element-blueprintCost" style="margin-right:10px;font-size:1.2em"></div>
+      <div id="element-blueprintCost" style="font-size:1.2em"></div>
 
       <button id="element-blueprintRotate" style="font-size:1.2em;position:absolute;bottom:-14px;left:-4px" >↻</button>
 
@@ -40,10 +40,10 @@ html,body{font-size: 14px;user-select:none;font-family:Helvetica;overscroll-beha
   <button id="element-closeShopButton" style="font-size:30px;padding:4px 10px;position:absolute;top:2px;right:2px;z-index:3;background:#0000;border:none">×</button>
 </div>
 
-<div id="element-hint" style="position:fixed;right:10px;bottom:0;font-size:1.8em;line-height:40px;letter-spacing:1.4px;z-index:3;font-weight:bold"></div>
+<div id="element-hint" style="position:fixed;right:10px;bottom:0;font-size:1.8em;line-height:40px;z-index:3;font-weight:bold"></div>
 
 <div id="element-overlay" style="position:fixed;top:0;left:0;right:0;bottom:0;background-color:#000d;transition:background-color 200ms;display:flex;justify-content:center;align-items:center;z-index:3">
-  <div id="element-overlayTutorial" style="color:#fff;font-size:24px;line-height:40px;letter-spacing:1.4px;padding:0 10%"></div>
+  <div id="element-overlayTutorial" style="color:#fff;font-size:2em;line-height:2em;padding:10%"></div>
 </div>
 
 <script src="a.js"></script>
