--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
 *{box-sizing:border-box;transition:transform 180ms}
-html,body{font-size: 14px;user-select:none;font-family:Helvetica;overscroll-behavior-y:contain;}
-@media (min-width: 600px){body{font-size: 16px}}
+html,body{font-size:14px;user-select:none;font-family:Helvetica;overscroll-behavior-y:contain}
+@media (min-width:600px){body{font-size:16px}}
 </style>
 </head>
 <body>
